<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toStartOf="@+id/editText"
    app:layout_constraintHorizontal_bias="0.5"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#FF1493"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_save_border"
        android:onClick="addNote"
        android:text="@string/button_save"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddPhoto" />

    <EditText
        android:id="@+id/editNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_note_border"
        android:ems="10"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@+id/guidelineEditNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEditNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_photo"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/sharp_add_a_photo_24"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="@+id/editNote"
        app:layout_constraintTop_toTopOf="@+id/guidelineEditNote" />

    <Button
        android:id="@+id/btnRecordAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_voice"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:drawableLeft="@drawable/sharp_keyboard_voice_24"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editNote"
        app:layout_constraintTop_toTopOf="@+id/guidelineEditNote" />

</androidx.constraintlayout.widget.ConstraintLayout>